--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,107 @@
+theme: jekyll-theme-chirpy
+
+lang: en-US
+
 title: meroupatate
-email: alice.zhen@telecom-sudparis.eu
+tagline: Hoping to share some useful stuff
 description: >-
     Hi there, I am Alice and I am a French engineering student at Télécom SudParis.
 url: "https://meroupatate.github.io"
-theme: jekyll-dash
-show_excerpts: false
 
-paginate: 5
-paginate_path: "/blog/page:num/"
+paginate: 10
 
-tag_permalink_style: pretty
-tag_page_layout: tag_page
-tag_page_dir: tag
+github:
+  username: meroupatate
+twitter:
+  username: meroupatate
+social:
+  name: Alice ZHEN 
+  email: alice.zhen@telecom-sudparis.eu
+  links:
+    - https://github.com/meroupatate
+    - https://twitter.com/meroupatate
+    - https://www.linkedin.com/in/alicezhen07
 
-dash:
-    date_format: "%b %-d, %Y"
-    disqus:
-        shortname: meroupatate-github-io
-    social_links:
-        - url: https://twitter.com/meroupatate
-          icon: twitter-square
-          color: cyan
-        - url: https://github.com/meroupatate
-          icon: github-square
-          color: purple
+theme_mode: dark
+avatar: https://avatars.githubusercontent.com/u/43771848?v=4
 
-plugins:
-    - jekyll/tagging
-    - jekyll-sitemap
+disqus:
+  comments: true
+  shortname: 'meroupatate-github-io'
+
+# ------------ The following options are not recommended to be modified ------------------
+
+kramdown:
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:   # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: highlight
+    # default_lang: console
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
+collections:
+  tabs:
+    output: true
+    sort_by: order
+
+
+defaults:
+  -
+    scope:
+      path: ''          # An empty string here means all files in the project
+      type: posts
+    values:
+      layout: post
+      comments: true    # Enable comments in posts.
+      toc: true         # Display TOC column in posts.
+      # DO NOT modify the following parameter unless you are confident enough
+      # to update the code of all other post links in this project.
+      permalink: /posts/:title/
+  -
+    scope:
+      path: _drafts
+    values:
+      comments: false
+  -
+    scope:
+      path: ''
+      type: tabs             # see `site.collections`
+    values:
+      layout: page
+      permalink: /:title/
+      dynamic_title: true    # Hide title in mobile screens.
+
+sass:
+  style: compressed
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+  ignore:
+    envs: [development]
+
+exclude:
+  - '*.gem'
+  - '*.gemspec'
+  - tools
+  - docs
+  - README.md
+  - LICENSE
+  - gulpfile.js
+  - node_modules
+  - '*.json'
+
+jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
